<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roomba Controller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_left">Left</string>
    <string name="action_right">Right</string>
    <string name="action_advance">Advance</string>
    <string name="current_position">Current Position</string>
    <string name="action_reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="action_command">Give command</string>
    <string name="give_command">Give command</string>

</resources>
