<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_left"
          android:title="@string/action_left"
          android:orderInCategory="100"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_right"
          android:title="@string/action_right"
          android:orderInCategory="100"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_advance"
          android:title="@string/action_advance"
          android:orderInCategory="100"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_reset"
          android:title="@string/action_reset"
          android:orderInCategory="100"
          app:showAsAction="never" />

    <item android:id="@+id/action_command"
          android:title="@string/action_command"
          android:orderInCategory="100"
          app:showAsAction="never" />


</menu>
